--- a/public/civil.html
+++ b/public/civil.html
@@ -83,18 +83,22 @@
             <div class="card mb-3" style="border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
-                        <img src="./images/corporate.png" class="information-img embed-responsive-item rounded-start px-4"
-                            alt="civil-law">
+                        <img src="./images/corporate.png"
+                            class="information-img embed-responsive-item rounded-start px-4" alt="civil-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h2 class="card-title">Podemos apoyar en:</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item card-text">Incumplimiento, recisión o cumplimiento forzoso de contratos.</li>
-                                <li class="list-group-item card-text">Ejecución de derechos civiles y mercantiles, tales como cobranza judicial y extra judicial.</li>
-                                <li class="list-group-item card-text">Ejecución de cheques, pagarés y títulos de crédito, al igual que de garantías hipotecarias y prendarias.</li>
+                                <li class="list-group-item card-text">Incumplimiento, recisión o cumplimiento forzoso de
+                                    contratos.</li>
+                                <li class="list-group-item card-text">Ejecución de derechos civiles y mercantiles, tales
+                                    como cobranza judicial y extra judicial.</li>
+                                <li class="list-group-item card-text">Ejecución de cheques, pagarés y títulos de
+                                    crédito, al igual que de garantías hipotecarias y prendarias.</li>
                                 <li class="list-group-item card-text">Recuperación de carteras vencidas.</li>
-                                <li class="list-group-item card-text">Elaboración de contratos de todo tipo en materia civil y mercantil.</li>
+                                <li class="list-group-item card-text">Elaboración de contratos de todo tipo en materia
+                                    civil y mercantil.</li>
                                 <li class="list-group-item card-text">Amparos.</li>
                                 <li class="list-group-item card-text">Seguros y fianzas.</li>
                             </ul>
@@ -105,7 +109,7 @@
         </section>
 
         <section class="information-header text-center py-4">
-            <h2 >Ofrecemos asesoría y ejecución en toda la República
+            <h2>Ofrecemos asesoría y ejecución en toda la República
                 Mexicana, ante tribunales locales y federales.</h2>
         </section>
 
@@ -135,18 +139,18 @@
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
-                            <p class="card-text text-footer">Teléfono.</p>
-                            <p class="card-text text-footer">Email.</p>
+                            <p class="card-text text-footer">Teléfono: +52 (81) 1350-5336</p>
+                            <p class="card-text text-footer">Email: riglesias@iglesiasyabogados.com</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <p class="card-text text-footer">Dirección.</p>
-                            <p class="card-text text-footer">Nombre</p>
+                            <p class="card-text text-footer">Dirección: Carretelas 112, Lomas de la Herradura, Naucalpan
+                                de Juárez, Estado de México.</p>
+                            <p class="card-text text-footer">Licenciado Rodrigo Iglesias Campos</p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </footer>
 </body>
