--- a/public/familiar.html
+++ b/public/familiar.html
@@ -105,7 +105,8 @@
                                 <li class="list-group-item card-text">Restitución internacional de menores.</li>
                                 <li class="list-group-item card-text">Restricciónes familiares.</li>
                                 <li class="list-group-item card-text">Estados de interdicción.</li>
-                                <li class="list-group-item card-text">Procedimientos de declaración de ausencia y presunción de
+                                <li class="list-group-item card-text">Procedimientos de declaración de ausencia y
+                                    presunción de
                                     muerte.</li>
                                 <li class="list-group-item card-text">Sucesiónes testamentarias e intestamentarias.</li>
                                 <li class="list-group-item card-text">Reconocimiento de hijos.</li>
@@ -150,18 +151,18 @@
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
-                            <p class="card-text text-footer">Teléfono.</p>
-                            <p class="card-text text-footer">Email.</p>
+                            <p class="card-text text-footer">Teléfono: +52 (81) 1350-5336</p>
+                            <p class="card-text text-footer">Email: riglesias@iglesiasyabogados.com</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <p class="card-text text-footer">Dirección.</p>
-                            <p class="card-text text-footer">Nombre</p>
+                            <p class="card-text text-footer">Dirección: Carretelas 112, Lomas de la Herradura, Naucalpan
+                                de Juárez, Estado de México.</p>
+                            <p class="card-text text-footer">Licenciado Rodrigo Iglesias Campos</p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </footer>
 </body>
