--- a/public/investigaciones.html
+++ b/public/investigaciones.html
@@ -64,8 +64,8 @@
             <div class="card mb-3" style="border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
-                        <img src="./images/research.png" class="information-img embed-responsive-item rounded-start px-4"
-                            alt="research-law">
+                        <img src="./images/research.png"
+                            class="information-img embed-responsive-item rounded-start px-4" alt="research-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
@@ -111,18 +111,18 @@
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
-                            <p class="card-text text-footer">Teléfono.</p>
-                            <p class="card-text text-footer">Email.</p>
+                            <p class="card-text text-footer">Teléfono: +52 (81) 1350-5336</p>
+                            <p class="card-text text-footer">Email: riglesias@iglesiasyabogados.com</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <p class="card-text text-footer">Dirección.</p>
-                            <p class="card-text text-footer">Nombre</p>
+                            <p class="card-text text-footer">Dirección: Carretelas 112, Lomas de la Herradura, Naucalpan
+                                de Juárez, Estado de México.</p>
+                            <p class="card-text text-footer">Licenciado Rodrigo Iglesias Campos</p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </footer>
 </body>
