--- a/public/penal.html
+++ b/public/penal.html
@@ -91,17 +91,19 @@
             <div class="card mb-3" style="border: none;">
                 <div class="row g-0">
                     <div class="col-md-4 embed-responsive embed-responsive-16by9">
-                        <img src="./images/criminal.png" class="information-img embed-responsive-item rounded-start px-4"
-                            alt="penal-law">
+                        <img src="./images/criminal.png"
+                            class="information-img embed-responsive-item rounded-start px-4" alt="penal-law">
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h2 class="card-title">En materia penal, ofrecemos asesoría y apoyo en:</h2>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item card-text">Allanamiento de morada.</li>
-                                <li class="list-group-item card-text">Apoyo a víctimas y asesoría jurídica en materia de delitos
+                                <li class="list-group-item card-text">Apoyo a víctimas y asesoría jurídica en materia de
+                                    delitos
                                     sexuales (violación, abuso sexual, acoso sexual).</li>
-                                <li class="list-group-item card-text">Defensa y o asesoría jurídica en delitos patrimoniales
+                                <li class="list-group-item card-text">Defensa y o asesoría jurídica en delitos
+                                    patrimoniales
                                     (fraude, abuso de confianza y robos).</li>
                                 <li class="list-group-item card-text">Delincuencia organizada.</li>
                                 <li class="list-group-item card-text">Delitos ambientales.</li>
@@ -130,7 +132,7 @@
         </section>
 
         <section class="information-header text-center py-4">
-            <h2 >Ofrecemos asesoría y ejecución en toda la República
+            <h2>Ofrecemos asesoría y ejecución en toda la República
                 Mexicana, ante tribunales locales y federales.</h2>
         </section>
 
@@ -160,18 +162,18 @@
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
-                            <p class="card-text text-footer">Teléfono.</p>
-                            <p class="card-text text-footer">Email.</p>
+                            <p class="card-text text-footer">Teléfono: +52 (81) 1350-5336</p>
+                            <p class="card-text text-footer">Email: riglesias@iglesiasyabogados.com</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <p class="card-text text-footer">Dirección.</p>
-                            <p class="card-text text-footer">Nombre</p>
+                            <p class="card-text text-footer">Dirección: Carretelas 112, Lomas de la Herradura, Naucalpan
+                                de Juárez, Estado de México.</p>
+                            <p class="card-text text-footer">Licenciado Rodrigo Iglesias Campos</p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </footer>
 </body>
