--- a/public/publicaciones.html
+++ b/public/publicaciones.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Publicaciones</title>
-    <meta name="description"
-        content="Iglesias y abogados: bufete de abogados. Publicaciones jurídicas">
+    <meta name="description" content="Iglesias y abogados: bufete de abogados. Publicaciones jurídicas">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css" />
@@ -19,7 +18,7 @@
         <nav class="navbar navbar-expand-lg fixed-top navbar navbar-dark" style="background-color: #050a30">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
-                    <img src="./images/logo.png" alt="law-publicationwidth="60" height="54">
+                    <img src="./images/logo.png" alt="law-publicationwidth=" 60" height="54">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -67,8 +66,7 @@
             <div class="mx-auto card mb-3" style="max-width: 1000px">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="./images/article-one.png"
-                            class="img-fluid rounded-start" alt="law-publication" />
+                        <img src="./images/article-one.png" class="img-fluid rounded-start" alt="law-publication" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
@@ -83,8 +81,7 @@
             <div class="mx-auto card mb-3" style="max-width: 1000px">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="./images/article-two.png"
-                            class="img-fluid rounded-start" alt="law-publication" />
+                        <img src="./images/article-two.png" class="img-fluid rounded-start" alt="law-publication" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
@@ -99,8 +96,7 @@
             <div class="mx-auto card mb-3" style="max-width: 1000px">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="./images/article-three.png"
-                            class="img-fluid rounded-start" alt="law-publication" />
+                        <img src="./images/article-three.png" class="img-fluid rounded-start" alt="law-publication" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
@@ -115,8 +111,7 @@
             <div class="mx-auto card mb-3" style="max-width: 1000px">
                 <div class="row g-0">
                     <div class="col-md-6">
-                        <img src="./images/article-four.png"
-                            class="img-fluid rounded-start" alt="law-publication" />
+                        <img src="./images/article-four.png" class="img-fluid rounded-start" alt="law-publication" />
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
@@ -139,18 +134,18 @@
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
-                            <p class="card-text text-footer">Teléfono.</p>
-                            <p class="card-text text-footer">Email.</p>
+                            <p class="card-text text-footer">Teléfono: +52 (81) 1350-5336</p>
+                            <p class="card-text text-footer">Email: riglesias@iglesiasyabogados.com</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <p class="card-text text-footer">Dirección.</p>
-                            <p class="card-text text-footer">Nombre</p>
+                            <p class="card-text text-footer">Dirección: Carretelas 112, Lomas de la Herradura, Naucalpan
+                                de Juárez, Estado de México.</p>
+                            <p class="card-text text-footer">Licenciado Rodrigo Iglesias Campos</p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </footer>
 </body>
