--- a/public/welcome.html
+++ b/public/welcome.html
@@ -84,7 +84,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Misión</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item card-text">Resolver los conflictos e injusticias a los que se enfrentan
+                                <li class="list-group-item card-text">Resolver los conflictos e injusticias a los que se
+                                    enfrentan
                                     nuestros
                                     clientes de manera rápida y eficiente, con la premisa de que siempre hay una
                                     solución.
@@ -96,7 +97,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Visión</h2>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item card-text">Otorgar a toda la población mexicana la certeza que existen
+                                <li class="list-group-item card-text">Otorgar a toda la población mexicana la certeza
+                                    que existen
                                     recursos
                                     para obtener una solución justa a sus conflictos, ofreciéndoles los instrumentos
                                     jurídicos necesarios para defenderlos de los excesos y abusos de la autoridad.</li>
@@ -128,13 +130,18 @@
             <h2 class="text-center my-4">Servicios</h2>
 
             <div class="list-group text-center">
-                <a href="/derechocivilymercantil" class="welcome-link list-group-item list-group-item-action card-text" aria-current="true">
+                <a href="/derechocivilymercantil" class="welcome-link list-group-item list-group-item-action card-text"
+                    aria-current="true">
                     Derecho Civil y Mercantil
                 </a>
-                <a href="/derechofamiliar" class="welcome-link list-group-item list-group-item-action card-text">Derecho Familiar</a>
-                <a href="/derechoinmobiliario" class="welcome-link list-group-item list-group-item-action card-text">Derecho Inmobiliario</a>
-                <a href="/derechopenal" class="welcome-link list-group-item list-group-item-action card-text">Derecho Penal</a>
-                <a href="/investigaciones" class="welcome-link list-group-item list-group-item-action card-text">Investigaciónes</a>
+                <a href="/derechofamiliar" class="welcome-link list-group-item list-group-item-action card-text">Derecho
+                    Familiar</a>
+                <a href="/derechoinmobiliario"
+                    class="welcome-link list-group-item list-group-item-action card-text">Derecho Inmobiliario</a>
+                <a href="/derechopenal" class="welcome-link list-group-item list-group-item-action card-text">Derecho
+                    Penal</a>
+                <a href="/investigaciones"
+                    class="welcome-link list-group-item list-group-item-action card-text">Investigaciónes</a>
             </div>
         </section>
 
@@ -165,18 +172,18 @@
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
-                            <p class="card-text text-footer">Teléfono.</p>
-                            <p class="card-text text-footer">Email.</p>
+                            <p class="card-text text-footer">Teléfono: +52 (81) 1350-5336</p>
+                            <p class="card-text text-footer">Email: riglesias@iglesiasyabogados.com</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <p class="card-text text-footer">Dirección.</p>
-                            <p class="card-text text-footer">Nombre</p>
+                            <p class="card-text text-footer">Dirección: Carretelas 112, Lomas de la Herradura, Naucalpan
+                                de Juárez, Estado de México.</p>
+                            <p class="card-text text-footer">Licenciado Rodrigo Iglesias Campos</p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </footer>
 </body>
