--- a/public/advise.html
+++ b/public/advise.html
@@ -32,7 +32,8 @@
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
                         <a class="nav-item nav-link" href="/contacto">Contacto</a>
-                        <a class="nav-item nav-link active" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
+                        <a class="nav-item nav-link active" href="/avisodeprivacidad">Aspectos Legales/Aviso de
+                            Privacidad</a>
                     </div>
                 </div>
             </div>
@@ -99,18 +100,18 @@
                 <div class="row g-0 ">
                     <div class="col-md-6 ">
                         <div class="card-body">
-                            <p class="card-text text-footer">Teléfono.</p>
-                            <p class="card-text text-footer">Email.</p>
+                            <p class="card-text text-footer">Teléfono: +52 (81) 1350-5336</p>
+                            <p class="card-text text-footer">Email: riglesias@iglesiasyabogados.com</p>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="card-body">
-                            <p class="card-text text-footer">Dirección.</p>
-                            <p class="card-text text-footer">Nombre</p>
+                            <p class="card-text text-footer">Dirección: Carretelas 112, Lomas de la Herradura, Naucalpan
+                                de Juárez, Estado de México.</p>
+                            <p class="card-text text-footer">Licenciado Rodrigo Iglesias Campos</p>
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </footer>
 
