changes to redirected to publications and header changes

--- a/public/inmobiliario.html
+++ b/public/inmobiliario.html
@@ -33,7 +33,7 @@
                         <a class="nav-item  nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item  nav-link" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item  nav-link" href="/investigaciones">Investigaciónes</a>
-                        <a class="nav-item  nav-link" href="/publicaciones">Publicaciones</a>
+                        <!-- <a class="nav-item  nav-link" href="/publicaciones">Publicaciones</a> -->
                         <a class="nav-item  nav-link" href="/contacto">Contacto</a>
                         <a class="nav-item  nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
