--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item nav-link" href="/investigaciones">Investigaciónes</a>
-                        <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
+                        <!-- <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a> -->
                         <a class="nav-item nav-link" href="/contacto">Contacto</a>
                         <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
@@ -98,7 +98,7 @@
                     <h3 class="card-title my-5">
                         No importa el conflicto, siempre hay una solución
                     </h3>
-                    <a href="/contacto" class="btn btn-primary">Contactanos</a>
+                    <a href="/contacto" class="btn btn-primary">Contáctanos</a>
                 </div>
             </div>
         </section>
