--- a/public/investigaciones.html
+++ b/public/investigaciones.html
@@ -33,7 +33,7 @@
                         <a class="nav-item nav-link" href="/derechofamiliar">Derecho Familiar</a>
                         <a class="nav-item nav-link" href="/derechopenal">Derecho Penal</a>
                         <a class="nav-item nav-link active" href="/investigaciones">Investigaciónes</a>
-                        <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a>
+                        <!-- <a class="nav-item nav-link" href="/publicaciones">Publicaciones</a> -->
                         <a class="nav-item nav-link" href="/contacto">Contacto</a>
                         <a class="nav-item nav-link" href="/avisodeprivacidad">Aspectos Legales/Aviso de Privacidad</a>
                     </div>
@@ -95,7 +95,7 @@
                     <h3 class="card-title">
                         No importa el conflicto, siempre hay una solución
                     </h3>
-                    <a href="/publicaciones" class="btn btn-primary">Publicaciones</a>
+                    <a href="/contacto" class="btn btn-primary">Contáctanos</a>
                 </div>
             </div>
         </section>
